--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -3,6 +3,10 @@
     {
       "path": "force-app",
       "default": true
+    },
+{
+      "path": "Copadotest",
+      "default": true
     }
   ],
   "name": "sfdxTrial",
