--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,16 +1,1 @@
-{
-  "packageDirectories": [
-    {
-      "path": "force-app",
-      "default": true
-    },
-    {
-      "path": "Copadotest",
-      "default": false
-    }
-  ],
-  "name": "sfdxTrial",
-  "namespace": "",
-  "sfdcLoginUrl": "https://login.salesforce.com",
-  "sourceApiVersion": "63.0"
-}
+{"packageDirectories":[{"path":"force-app","default":true,"dependencies":[{"package":"Nebula"}]},{"path":"Copadotest","default":false}],"name":"sfdxTrial","namespace":"","sfdcLoginUrl":"https://login.salesforce.com","sourceApiVersion":"64.0","packageAliases":{"Nebula":"0Ho58000000011tCAA"}}
