--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -19,7 +19,7 @@
   "sfdcLoginUrl": "https://login.salesforce.com",
   "sourceApiVersion": "64.0",
   "packageAliases": {
-    "sfdxTrial": "0HoXXXXX",
+    "sfdxTrial": "0HoWz00000005kTKAQ",
     "Nebula Logger": "0Ho58000000011tCAA"
   }
 }
