--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -20,6 +20,6 @@
   "sourceApiVersion": "64.0",
   "packageAliases": {
     "sfdxTrial": "0HoWz00000005kTKAQ",
-    "Nebula Logger": "0Ho58000000011tCAA"
+    "Nebula Logger": "04t5H000001M67pQAC"
   }
 }
