--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,7 +5,7 @@
       "default": true,
       "package": "sfdxTrial",
       "versionName": "ver 0.1",
-      "versionNumber": "0.1.0.NEXT",
+      "versionNumber": "0.1.0.beta1",
       "dependencies": [
         {
           "package": "Nebula Logger",
