--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -19,6 +19,7 @@
   "sourceApiVersion": "64.0",
   "packageAliases": {
     "sfdxTrial": "0HoWz00000005kTKAQ",
-    "Nebula Logger": "04t5H000001M67pQAC"
+    "Nebula Logger": "04t5H000001M67pQAC",
+    "sfdxTrial@0.1.0-1-main": "04tWz000000USTVIA4"
   }
 }
