Committing sfdx-project.json

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -20,6 +20,7 @@
   "packageAliases": {
     "sfdxTrial": "0HoWz00000005kTKAQ",
     "Nebula Logger": "04t5Y0000027L98QAE",
-    "sfdxTrial@0.1.0-1-main": "04tWz000000USTVIA4"
+    "sfdxTrial@0.1.0-1-main": "04tWz000000USTVIA4",
+    "sfdxTrial@0.1.1-1-main": "04tWz000000USV7IAO"
   }
 }
