--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,11 +5,15 @@
       "default": true,
       "package": "sfdxTrial",
       "versionName": "ver 0.1",
-      "versionNumber": "0.1.1.NEXT",
+      "versionNumber": "0.1.2.NEXT",
       "dependencies": [
         {
           "package": "Nebula Logger"
         }
+        ,
+      {
+      "package": "04tal0000016Pj7AAE"
+      }
       ]
     }
   ],
