--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -9,11 +9,10 @@
       "dependencies": [
         {
           "package": "Nebula Logger"
+        },
+        {
+          "package": "04tal0000016Pj7AAE"
         }
-        ,
-      {
-      "package": "04tal0000016Pj7AAE"
-      }
       ]
     }
   ],
@@ -25,6 +24,7 @@
     "sfdxTrial": "0HoWz00000005kTKAQ",
     "Nebula Logger": "04t5Y0000027L98QAE",
     "sfdxTrial@0.1.0-1-main": "04tWz000000USTVIA4",
-    "sfdxTrial@0.1.1-1-main": "04tWz000000USV7IAO"
+    "sfdxTrial@0.1.1-1-main": "04tWz000000USV7IAO",
+    "sfdxTrial@0.1.2-1-main": "04tWz000000USi1IAG"
   }
 }
